# team-pa-monorepo

./: .gitignore  requirements.txt
.devcontainer/: devcontainer.json
sindusha/tm-composite-nkom/: pyproject.toml  requirements.txt  tm_2.py  tset_nkom.py
sindusha/tm-composite-nkom/src/tm_composite_nkom/: _version.py  tm_2.py
sindusha/tm-composite-nkom/src/tm_composite_nkom/data/: nkom_dataloader.py
sindusha/tm_composite_nkom/: Dockerfile  requirements.txt  setup.py
sindusha/tm_composite_nkom/.devcontainer/: devcontainer.json
sindusha/tm_composite_nkom/src/tm_composite_nkom/: tm_2.py
sindusha/tm_composite_nkom/src/tm_composite_nkom/data/: nkom_dataloader.py  sindusha_dataloader.py
sindusha/tm_composite_nkom/src/tm_composite_nkom/filters/: functions.py
